render rich text from storyblok in modal

--- a/components/Grid.css
+++ b/components/Grid.css
@@ -37,18 +37,14 @@
     left: 0;
     right: 0;
     bottom: 0;
-    width: 80%;
     height: 100vh;
     background-color: #fff;
-    padding: 20px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
-    width: 80%;
-    max-width: 600px;
+    width: 80vw;
     
   }
   
   .modal-content {
-    text-align: center;
     width: 100%;
   }
   
